--- a/tcms/templates/plan/all.html
+++ b/tcms/templates/plan/all.html
@@ -33,7 +33,7 @@ Nitrate.Utils.after_page_load(Nitrate.TestPlans.List.on_load);
 				<input type="submit" size="7" value="Search" class="left_float" />
 				<input type="reset" size="7" value="Reset" title="Reset the form" class="left_float" />
 				<div class="allSearch">
-					<a title="list all the plans" href="?name=&author=&product_id=&env_group_id=&is_active=on">View All Plans</a>
+					<a title="list all the plans" href="?name=&author=&product_id=&is_active=on">View All Plans</a>
 				</div>
 			</div>
 			<div class="clear"></div>
