--- a/tcms/templates/run/all.html
+++ b/tcms/templates/run/all.html
@@ -10,7 +10,6 @@
 {% block custom_javascript %}
 <script type="text/javascript" src="{% static 'js/lib/jquery.dataTables.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/testrun_actions.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/management_actions.js' %}"></script>
 <script type="text/javascript">
 Nitrate.Utils.after_page_load(Nitrate.TestRuns.List.on_load);
 </script>
@@ -30,7 +29,7 @@ Nitrate.Utils.after_page_load(Nitrate.TestRuns.List.on_load);
 				<input type="submit" size="7" value="Search" class="left_float" />
 				<input type="reset" size="7"  value="Reset" class="left_float" />
 				<div class="allSearch">
-					<a href="?summary=&plan=&product_id=&env_group_id=&manager=&status=">View All Runs</a>
+					<a href="?summary=&plan=&product_id=&manager=&status=">View All Runs</a>
 				</div>
 			</div>
 			<div class="clear"></div>
