Add pagination to DataTables

--- a/tcms/testcases/templates/testcases/search.html
+++ b/tcms/testcases/templates/testcases/search.html
@@ -129,6 +129,9 @@
                 </tr>
             </thead>
         </table>
+
+        {% include 'pagination.html' %}
+
     </div>
 </div><!-- /container -->
 
@@ -138,5 +141,6 @@
 
 <script src="{% static 'js/jsonrpc.js' %}"></script>
 <script src="{% static 'js/utils.js' %}"></script>
+<script src="{% static 'js/pagination.js' %}"></script>
 <script src="{% static 'testcases/js/search.js' %}"></script>
 {% endblock %}
