--- a/tcms/testplans/templates/testplans/search.html
+++ b/tcms/testplans/templates/testplans/search.html
@@ -155,6 +155,9 @@
                 </tr>
             </thead>
         </table>
+
+        {% include 'pagination.html' %}
+
     </div>
 </div><!-- /container -->
 
@@ -166,5 +169,6 @@
 
 <script src="{% static 'js/jsonrpc.js' %}"></script>
 <script src="{% static 'js/utils.js' %}"></script>
+<script src="{% static 'js/pagination.js' %}"></script>
 <script src="{% static 'testplans/js/search.js' %}"></script>
 {% endblock %}
